repaired category link on mobile sidebar and arrow of carousel on top of side for product page corrected

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -76,6 +76,7 @@
     }
 
     .mobile-sidebar {
+        z-index: 1000 !important;
         background-color: white;
         width:80%;
     }
